CHANGELOG
=========


2019-06-09
----------

### Tests
* Added for common.conversion.Version

### Common
* conversion.Version:
  * denies text-only versions
  * split also for dashes

### changelog extractor
* Add support for axel, improve debian support
* improve detection of changelog in tarballs

### check-anitya
* Ignore versions that can't be parsed.

2019-06-02
----------

### changelog extractor
* Added

2018-03-11
----------

### branch-and-fix-license
* Added initial code

### license_rewriter
* Added initial code

2018-03-10
----------

### check-anitya
* parallelization
* supports not redirected exact matches

### common
* conversion:
 * add Version class for parsing and comparison
 * add IntStr class for permissive conversions between int and str

2018-02-26
----------

### check-anitya
* Added initial code
* Finds project IDs itself

### common
* config: added config read function
* zypper: add package version parser