@@ -2,6 +2,15 @@ CHANGELOG
 =========
 
 
+2019-06-30
+----------
+
+### Changelog extractor
+* Add generic rst conversion, tested with xarray, merged in xonsh
+* Add format detection based on filename
+* Detect whats-new changelog files
+* Handle broken pipe errors gracefully
+
 2019-06-09
 ----------
 
